--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "tsc -p tsconfig.build.json",
     "start": "node src/index.js",
     "dev:load-envs": "dotenv -e .env",
-    "dev:seed": "npm run dev:load-envs prisma db seed",
+    "seed": "npm run dev:load-envs prisma db seed",
     "dev": "nodemon src/index.ts"
+  },
+  "prisma":{
+    "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
