fix: adjust package.json for deploy

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "prisma":{
     "seed": "ts-node prisma/seed.ts",
-    "schema": "db/schema.prisma"
+    "schema": "prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
