--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "tsc -p tsconfig.build.json",
     "start": "node src/index.js",
     "dev:load-envs": "dotenv -e .env",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "seed": "ts-node prisma/seed.ts"
   },
   "prisma":{
-    "seed": "ts-node prisma/seed.ts",
+    "seed": "prisma/seed.ts",
     "schema": "prisma/schema.prisma"
   },
   "keywords": [],
