fix: adjust package.json for deploy - add type: module

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed": "prisma/seed.ts",
     "schema": "prisma/schema.prisma"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
