--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/index.js src/index.ts",
+    "start": "node dist/src/index.js src/index.ts",
     "dev:load-envs": "dotenv -e .env",
     "dev": "nodemon src/index.ts",
     "seed": "ts-node prisma/seed.ts"
